# 2SSP

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: ablations.py  datasets.py  evaluation.py  evopress.py  pruning.py  slicegpt.py  utilities.py
src/slice/: __init__.py  model_utils.py  slicing_scheduler.py
src/slice/adapters/: llama_adapter.py  mistral_adapter.py  opt_adapter.py  phi2_adapter.py  phi3_adapter.py  qwen_adapter.py
src/slicegpt_utils/: model_utils.py  slicing_scheduler.py
src/slicegpt_utils/adapters/: llama_adapter.py  mistral_adapter.py  opt_adapter.py  phi2_adapter.py  phi3_adapter.py  qwen_adapter.py
