[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twossp"
version = "0.2.0"
description = "2SSP: A Two-Stage Framework for Structured Pruning of LLMsn"
authors = [
    { name = "Fabrizio Sandri", email = "sandri.fabr@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "ml_collections",
    "torch==2.3.1",
    "transformers==4.47.1",
    "SentencePiece"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
indent-width = 2


[tool.setuptools]
include-package-data = true
